[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "disjointsetunion"
version = "1.2.0"
dependencies = []
requires-python = ">=3.12"
authors = [{name = "CRISvsGAME", email = "cris@crisvsgame.com"}]
maintainers = [{name = "CRISvsGAME", email = "cris@crisvsgame.com"}]
description = "Disjoint Set - Data Structure Implementation"
readme = "README.md"
license = "MIT"
keywords = ["disjoint set", "data structure", "union find"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["build", "mypy", "pylint", "pytest", "twine"]

[project.urls]
Homepage = "https://github.com/CRISvsGAME/disjointset"
Repository = "https://github.com/CRISvsGAME/disjointset.git"

[tool.pylint]
ignore-patterns = [".*\\.pyi"]

[tool.setuptools.package-data]
disjointset = ["py.typed", "*.pyi"]
